Initial changes to connect to bitcore-node

--- a/app/src/pages/block-detail/block-detail.html
+++ b/app/src/pages/block-detail/block-detail.html
@@ -105,7 +105,7 @@
     </ion-list>
 
     <h2>Transactions</h2>
-    <transaction-list [queryType]="'block'" [queryValue]="block.hash"></transaction-list>
+    <transaction-list [queryType]="'blockHash'" [queryValue]="block.hash"></transaction-list>
   </div>
 
 </ion-content>
