Working on getting address's transactions to show up

--- a/packages/insight/app/src/pages/address/address.html
+++ b/packages/insight/app/src/pages/address/address.html
@@ -47,7 +47,7 @@
 
         <h2>Transactions</h2>
 
-        <transaction-list [queryType]="'address'" [queryValue]="addrStr"></transaction-list>
+        <transaction-list [transactions]="transactions"></transaction-list>
   </div>
 
 </ion-content>
