remove coins on block detail

--- a/packages/insight/app/src/pages/transaction/transaction.html
+++ b/packages/insight/app/src/pages/transaction/transaction.html
@@ -49,7 +49,7 @@
 
     <h2>Details</h2>
 
-    <transaction [tx]="tx"></transaction>
+    <transaction [tx]="tx" [showCoins]="true"></transaction>
   </div>
 
 </ion-content>
