--- a/packages/insight/app/src/pages/address/address.html
+++ b/packages/insight/app/src/pages/address/address.html
@@ -9,8 +9,8 @@
 
   <div *ngIf="!loading" class="page-content">
     <h1>Address</h1>
-    <p class="ellipsis"><b>Address</b> {{ address.addrStr }}</p>
-    <p>{{ currency.getConvertedNumber(address.balance) | number:'1.0-8' }} {{ currency.currencySymbol }}</p>
+    <p class="ellipsis"><b>Address</b> {{ address.address }}</p>
+    <p>{{ currencyProvider.getConvertedNumber(address.value) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}</p>
 
     <h2>Summary</h2>
 
@@ -18,25 +18,25 @@
       <ion-item>
         Total Received
         <ion-note item-end>
-          {{ currency.getConvertedNumber(address.totalReceived) | number:'1.0-8' }} {{ currency.currencySymbol }}
+          {{ currencyProvider.getConvertedNumber(address.totalReceived) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
         </ion-note>
       </ion-item>
       <ion-item>
         Total Sent
         <ion-note item-end>
-          {{ currency.getConvertedNumber(address.totalSent) | number:'1.0-8' }} {{ currency.currencySymbol }}
+          {{ currencyProvider.getConvertedNumber(address.totalSent) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
         </ion-note>
       </ion-item>
       <ion-item>
         Final Balance
         <ion-note item-end>
-          {{ currency.getConvertedNumber(address.balance) | number:'1.0-8' }} {{ currency.currencySymbol }}
+          {{ currencyProvider.getConvertedNumber(address.balance) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
         </ion-note>
       </ion-item>
       <ion-item>
         No. Transactions
         <ion-note item-end>
-          {{ address.txApperances }}
+          {{ transactions.length }}
         </ion-note>
       </ion-item>
     </ion-list>
