--- a/packages/insight/app/src/pages/address/address.html
+++ b/packages/insight/app/src/pages/address/address.html
@@ -34,7 +34,7 @@
       <ion-item>
         No. Transactions
         <ion-note item-end>
-          {{ address.txApperances }}
+          {{ address.txAppearances }}
         </ion-note>
       </ion-item>
     </ion-list>
