--- a/packages/insight/app/src/pages/block-detail/block-detail.html
+++ b/packages/insight/app/src/pages/block-detail/block-detail.html
@@ -99,6 +99,12 @@
                 <a (click)="goToNextBlock()">{{ block.height + 1 }}</a>
               </ion-note>
             </ion-item>
+            <ion-item>
+              Confirmations
+              <ion-note item-end>
+                {{block.confirmations}}
+              </ion-note>
+            </ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
