--- a/packages/insight/app/src/pages/blocks/blocks.html
+++ b/packages/insight/app/src/pages/blocks/blocks.html
@@ -9,6 +9,6 @@
 
   <div *ngIf="!loading" class="page-content">
     <h1>Blocks</h1>
-    <latest-blocks [numBlocks]="defaults.getDefault('%NUM_BLOCKS%')" [showTimeAs]="'timestamp'" [showAllBlocksButton]="false" [showLoadMoreButton]="true"></latest-blocks>
+    <latest-blocks [numBlocks]="50" [showTimeAs]="'timestamp'" [showLoadMoreButton]="true"></latest-blocks>
   </div>
 </ion-content>
