--- a/packages/insight/app/src/pages/home/home.html
+++ b/packages/insight/app/src/pages/home/home.html
@@ -14,7 +14,7 @@
 
     <div class="latest-blocks">
       <h1>Latest Blocks</h1>
-      <latest-blocks [numBlocks]="defaults.getDefault('%NUM_BLOCKS%')" [showTimeAs]="'age'" [showAllBlocksButton]="true"></latest-blocks>
+      <latest-blocks [showTimeAs]="'age'" [showAllBlocksButton]="true"></latest-blocks>
     </div>
 
     <div class="about">
