Font changed. Style for logo

--- a/packages/insight-previous/src/pages/home/home.html
+++ b/packages/insight-previous/src/pages/home/home.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <head-nav [title]="'Insight'"></head-nav>
+  <head-nav [title]="'insight'"></head-nav>
 </ion-header>
 
 
@@ -20,7 +20,8 @@
     <div class="about">
       <p>
         <strong>Insight</strong> is an open-source Bitcoin blockchain explorer developed by
-        <a href="https://bitpay.com/" target="_blank">BitPay</a>. Insight also provides a complete REST and websocket API, giving developers access to more advanced blockchain
+        <a href="https://bitpay.com/" target="_blank">BitPay</a>. Insight also provides a complete REST and websocket
+        API, giving developers access to more advanced blockchain
         queries than those provided by many Bitcoin node implementations.</p>
       <p>
         The Insight project is available
