--- a/packages/insight-previous/src/pages/address/address.html
+++ b/packages/insight-previous/src/pages/address/address.html
@@ -24,9 +24,10 @@
     <p text-center>
       <qr-code [value]="address.addrStr" [size]="160"></qr-code>
       <p>
-
-        <h2>Transactions</h2>
-        <coin-list [coins]="transactions"></coin-list>
+        <div *ngIf="showTransactions">
+          <h2>Transactions</h2>
+          <coin-list [coins]="transactions"></coin-list>
+        </div>
   </div>
 
 </ion-content>
