--- a/packages/insight-previous/src/pages/home/home.html
+++ b/packages/insight-previous/src/pages/home/home.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <head-nav [title]="'insight'"></head-nav>
+  <head-nav [title]="'insight'" (updateView)="loadView($event,true)"></head-nav>
 </ion-header>
 
 
@@ -14,7 +14,7 @@
 
     <div class="latest-blocks">
       <h1>Latest Blocks</h1>
-      <latest-blocks [showTimeAs]="'age'" [showAllBlocksButton]="true"></latest-blocks>
+      <latest-blocks [showTimeAs]="'age'" [showAllBlocksButton]="true" #latestBlocks></latest-blocks>
     </div>
 
     <div class="about">
