block object reward was being multiplied by 10 ** 8 and passing number 1.0-8 to number pipeling in block-detail.html

--- a/packages/insight-previous/src/pages/block-detail/block-detail.html
+++ b/packages/insight-previous/src/pages/block-detail/block-detail.html
@@ -34,7 +34,7 @@
             <ion-item>
               Block Reward
               <ion-note item-end>
-                {{ currency.getConvertedNumber(block.reward) | number:'1.0-8' }} {{ currency.currencySymbol }}
+                {{ currency.getConvertedNumber(block.reward) | number }} {{ currency.currencySymbol }}
               </ion-note>
             </ion-item>
             <ion-item>
