remove the title of each view

--- a/packages/insight-previous/src/pages/broadcast-tx/broadcast-tx.html
+++ b/packages/insight-previous/src/pages/broadcast-tx/broadcast-tx.html
@@ -1,5 +1,4 @@
-<head-nav [title]="'Broadcast Transaction'"></head-nav>
-
+<head-nav></head-nav>
 <ion-content padding>
   <div class="page-content">
     <h1>Broadcast Transaction</h1>
