--- a/packages/insight-previous/src/pages/transaction/transaction.html
+++ b/packages/insight-previous/src/pages/transaction/transaction.html
@@ -1,5 +1,4 @@
-<head-nav [title]="'Transaction'"></head-nav>
-
+<head-nav></head-nav>
 <ion-content padding>
   <div *ngIf="loading">
     <ion-spinner name="crescent"></ion-spinner>
