--- a/packages/insight-previous/src/pages/address/address.html
+++ b/packages/insight-previous/src/pages/address/address.html
@@ -7,7 +7,8 @@
 
       <loader *ngIf="loading" [type]="'title'"></loader>
 
-      <error [message]="errorMessage" *ngIf="!loading && errorMessage "></error>
+      <alert-component [message]="errorMessage" [messageType]="'error'" *ngIf="!loading && errorMessage ">
+      </alert-component>
 
       <div *ngIf="!loading && !errorMessage">
         <h1>Address <small>{{ getConvertedNumber(address.balance) | number:'1.0-8' }}
