--- a/packages/insight-previous/src/pages/block-detail/block-detail.html
+++ b/packages/insight-previous/src/pages/block-detail/block-detail.html
@@ -6,7 +6,8 @@
 
       <loader *ngIf="loading" [type]="'title'"></loader>
 
-      <error [message]="errorMessage" *ngIf="!loading && errorMessage"></error>
+      <alert-component [message]="errorMessage" [messageType]="'error'" *ngIf="!loading && errorMessage">
+      </alert-component>
 
       <div *ngIf="!loading && !errorMessage">
 
@@ -64,8 +65,7 @@
                 <ion-item>
                   Previous Block
                   <ion-note item-end>
-                    <a (click)="goToPreviousBlock()"
-                      [ngClass]="{'disabled-link': block.height - 1 === 0 }">{{ block.height - 1 }}</a>
+                    <a (click)="goToPreviousBlock()" [ngClass]="{'disabled-link': block.height - 1 === 0 }">{{ block.height - 1 }}</a>
                   </ion-note>
                 </ion-item>
               </ion-col>
@@ -103,8 +103,7 @@
                 <ion-item>
                   Next Block
                   <ion-note item-end>
-                    <a (click)="goToNextBlock()"
-                      [ngClass]="{'disabled-link': !block.nextblockhash }">{{ block.height + 1 }}</a>
+                    <a (click)="goToNextBlock()" [ngClass]="{'disabled-link': !block.nextblockhash }">{{ block.height + 1 }}</a>
                   </ion-note>
                 </ion-item>
                 <ion-item>
