--- a/packages/insight/src/pages/address/address.html
+++ b/packages/insight/src/pages/address/address.html
@@ -50,7 +50,7 @@
         </ion-grid>
 
         <h1>Transactions</h1>
-        <coin-list [addrStr]="address.addrStr" [chainNetwork]="chainNetwork"></coin-list>
+        <transaction-list [queryType]="'address'" [queryValue]="address.addrStr" [chainNetwork]="chainNetwork"> </transaction-list>
       </div>
 
     </div>
