--- a/packages/insight/src/pages/home/home.html
+++ b/packages/insight/src/pages/home/home.html
@@ -1,12 +1,42 @@
 <head-nav [chainNetwork]="chainNetwork"></head-nav>
 
 <ion-content>
-  <ion-grid fixed>
-    <div class="page-content">
-      <h2>Latest Blocks</h2>
-      <latest-blocks [showTimeAs]="'age'" [showAllBlocksButton]="true" [chainNetwork]="chainNetwork" #latestBlocks>
-      </latest-blocks>
-    </div>
-  </ion-grid>
+  <ion-grid class="page-content-grid-desktop">
+        <ion-row>
+            <ion-col col-2 class="page-content-menu">
+                <div class= "menu">
+                  <h2> Explore </h2>
+                  <div class="menu-button" (click)="goToBlocks()"> Blocks </div>
+                  <div class="menu-button" (click)="goToPriceChartHandler()"> Price </div>
+                  <div class="menu-button" (click)=" drawDailyTxChartHandler()"> Txs per day </div>
+                </div>
+            </ion-col>
+
+               <ion-col col-10 class="page-content" *ngIf="currentView === 'blocks'">
+                <h2>Latest Blocks</h2>
+                <latest-blocks [showTimeAs]="'age'" [showAllBlocksButton]="true" [chainNetwork]="chainNetwork" #latestBlocks>
+                </latest-blocks>
+              </ion-col>
+
+        
+              <ion-col col-10 class="page-content" *ngIf="currentView === 'price-chart'">
+                <h2>Price Chart</h2>
+                <price-chart #priceChart> </price-chart>
+              </ion-col>
+
+              <ion-col col-10 class="page-content" *ngIf="currentView === 'txsperday'">
+                <h2>Daily Transaction Chart</h2>
+                <daily-transaction-chart #dailyTxChart> </daily-transaction-chart>
+              </ion-col>
+        </ion-row>
+    </ion-grid>
+
+    <ion-grid class="page-content-grid-mobile">
+        <ion-col class="page-content" col-12>
+            <h2>Latest Blocks</h2>
+            <latest-blocks [showTimeAs]="'age'" [showAllBlocksButton]="true" [chainNetwork]="chainNetwork" #latestBlocks>
+            </latest-blocks>
+        </ion-col>
+    </ion-grid>
 </ion-content>
 <footer [chainNetwork]="chainNetwork"></footer>
