fix currency typo in daily-tx-chart

--- a/packages/insight/src/pages/address/address.html
+++ b/packages/insight/src/pages/address/address.html
@@ -50,7 +50,8 @@
         </ion-grid>
 
         <h1>Transactions</h1>
-        <coin-list [addrStr]="address.addrStr" [chainNetwork]="chainNetwork"></coin-list>
+        <coin-list  *ngIf="chainNetwork.chain === 'ETH'" [addrStr]="address.addrStr" [chainNetwork]="chainNetwork"></coin-list>
+        <transaction-list *ngIf="chainNetwork.chain === 'BTC' || chainNetwork === 'BCH'" [queryType]="'address'" [queryValue]="address.addrStr" [chainNetwork]="chainNetwork"> </transaction-list>
       </div>
 
     </div>
