add bar chart; reformat price chart price; add ubuntu font-family back

--- a/packages/insight/src/pages/home/home.html
+++ b/packages/insight/src/pages/home/home.html
@@ -12,7 +12,14 @@
                         </div>
                     </div>
                     <div class="px-chart-container">
-                        <h2 class="content-container--heading">Price Chart</h2>
+                        <div class="price-chart-header">
+                            <div class="price-chart-title">
+                                    <h2 class="content-container--heading">Price Chart</h2>
+                            </div>
+                            <div class="price-chart-price">
+                                ${{ currentPrice }}
+                            </div>
+                        </div>
                         <div class="price-chart">
                             <price-chart #priceChart> </price-chart>
                         </div>
